<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"/>

    <!--<item-->
            <!--android:id="@+id/navigation_search"-->
            <!--android:icon="@drawable/ic_search_black_24dp"-->
            <!--android:title="@string/title_search"/>-->

    <item
            android:id="@+id/navigation_ar"
            android:icon="@drawable/ic_shirt_black_24dp"
            android:title="@string/title_ar"/>

    <!--<item-->
            <!--android:id="@+id/navigation_notifications"-->
            <!--android:icon="@drawable/ic_notifications_black_24dp"-->
            <!--android:title="@string/title_notifications"/>-->

    <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_profile_black_24dp"
            android:title="@string/title_profile"/>



</menu>
