<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/bottom_nav_bar_height"
        tools:context=".profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/profile_progress_bar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:indeterminate="true"/>

        <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/profile_image"
                android:layout_height="@dimen/profile_image"

                app:civ_border_color="#EEEEEE"
                app:civ_border_width="4dp"
                app:civ_shadow="true"
                app:civ_shadow_radius="8"
                app:civ_background_color="@android:color/white"
                app:civ_shadow_color="@color/colorPrimary"

                app:srcCompat="@drawable/default_profile"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/upload_button"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/profile_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:visibility="invisible"

                android:text="@string/action_upload"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                app:layout_constraintTop_toBottomOf="@+id/upload_button">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"

                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryTextLight"
                    android:textAlignment="center"
                    android:inputType="textPersonName"
                    tools:text="@string/default_profile_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/about_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_profile_about"

                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                app:layout_constraintTop_toBottomOf="@+id/name_text_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"

                    android:textSize="15sp"
                    tools:text="@string/default_profile_about"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/colorSecondaryTextLight"
                    android:inputType="textMultiLine"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/shop_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about_text_input_layout"
                android:layout_marginTop="32dp"
                android:layout_marginStart="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/shop_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_shop"
                    android:enabled="false"

                    android:textSize="15sp"
                    android:textColor="@color/colorSecondaryTextLight"
                    android:textStyle="bold"
                    tools:text="@string/default_profile_shop_name"
                    android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shop_text_input_layout"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone"
                    android:enabled="false"

                    android:textSize="15sp"
                    android:textColor="@color/colorSecondaryTextLight"
                    android:drawablePadding="10dp"
                    tools:text="@string/default_profile_phone"
                    android:inputType="phone"
                    android:textStyle="bold"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"

                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_text_input_layout"
                android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_address"

                    android:textSize="15sp"
                    android:textColor="@color/colorSecondaryTextLight"
                    android:drawablePadding="10dp"
                    tools:text="@string/default_profile_address"
                    android:inputType="textMultiLine"
                    android:textStyle="bold"/>

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
                android:id="@+id/product_list_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="19sp"
                android:textColor="@color/colorPrimaryTextLight"
                android:textStyle="bold"
                android:drawablePadding="10dp"
                android:text="@string/title_product_list"

                app:layout_constraintTop_toBottomOf="@id/address_text_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/products_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"

                app:layout_constraintTop_toBottomOf="@id/product_list_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/product_list_progress_bar"

                app:layout_constraintTop_toBottomOf="@+id/product_list_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:indeterminate="true"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>